@@ -2,32 +2,31 @@ package com.hanfei.rpc.util;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
-import java.util.HashMap;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 
+/**
+ * 确保 PendingRequests 和 RpcRequestHandler 的全局唯一性
+ */
+@Slf4j
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class SingletonFactory {
-    // One kind of clazz can only
-    private static final Map<Class, Object> OBJECT_MAP = new HashMap<>();
-
-    /**
-     * get the singleton object instance, making sure that only one instance of the object exists in the JVM
-     */
+    private static final Map<Class<?>, Object> SINGLETON_CACHE = new ConcurrentHashMap<>();
+    
+    @SuppressWarnings("unchecked")
     public static <T> T getInstance(Class<T> clazz) {
-        Object instance = OBJECT_MAP.get(clazz);
-
-        // synchronize on the class to ensure thread safety during instance creation
-        synchronized (clazz) {
-            if (instance == null) {
-                try { // create a new instance using reflection and store it
-                    instance = clazz.newInstance();
-                    OBJECT_MAP.put(clazz, instance);
-                } catch (IllegalAccessException | InstantiationException e) {
-                    throw new RuntimeException(e.getMessage(), e);
-                }
+        return (T) SINGLETON_CACHE.computeIfAbsent(clazz, key -> {
+            try {
+                return key.getDeclaredConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                     InvocationTargetException e) {
+                String errMsg = "创建单例失败: " + e.getMessage();
+                log.error(errMsg);
+                throw new RuntimeException(errMsg);
             }
-        }
-        return clazz.cast(instance);
+        });
     }
 }
